<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0d3ed"

    >
    <RelativeLayout
        android:id="@+id/relation1"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/text1"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textStyle="bold"

            android:text="@string/aefi18" />
        <Spinner
            android:layout_width="160dp"
            android:layout_marginLeft="170dp"
            android:backgroundTint="#ffffff"

            android:layout_marginStart="170dp" android:background="@drawable/border"

            android:layout_height="40dp"
            android:entries="@array/vaccinename"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relation2"
        android:layout_below="@id/relation1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textStyle="bold"

            android:text="@string/aefi19"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="150dp" android:inputType="" 
            android:layout_height="40dp"
            android:layout_marginStart="170dp" android:background="@drawable/border"
            android:backgroundTint="#ffffff"

            android:layout_marginLeft="170dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relation3"
        android:layout_width="fill_parent"
        android:layout_below="@id/relation2"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"


            android:layout_marginStart="10dp" android:gravity="center"
            android:text="@string/aefi20"
            android:textStyle="bold" />

        <EditText
            android:layout_width="150dp" android:inputType="" 
            android:layout_height="40dp"
            android:layout_marginLeft="170dp"
            android:layout_marginStart="170dp" android:background="@drawable/border"

            android:backgroundTint="#ffffff" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relation4"
        android:layout_width="fill_parent"
        android:layout_below="@id/relation3"
        android:layout_marginTop="20dp"        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" android:gravity="center"
            android:textStyle="bold"

            android:layout_marginTop="10dp"
            android:text="@string/aefi16" />

        <Spinner
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="170dp"
            android:layout_marginStart="170dp" android:background="@drawable/border"
            android:backgroundTint="#ffffff"

            android:layout_marginTop="10dp"
            android:entries="@array/vaccinedose">

        </Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relation5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relation4"
        android:layout_marginTop="20dp"        >
        <TextView
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp" android:gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"

            android:text="@string/aefi21"/>
        <EditText
            android:layout_width="160dp" android:inputType="" 
            android:layout_marginStart="170dp" android:background="@drawable/border"
            android:backgroundTint="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_marginLeft="170dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relation6"
        android:layout_width="wrap_content"
        android:layout_below="@id/relation5"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" android:gravity="center"
            android:layout_marginVertical="0dp"
            android:textStyle="bold"

            android:text="@string/aefi22" />
        <EditText
            android:layout_width="160dp" android:inputType="" 
            android:layout_marginStart="170dp" android:background="@drawable/border"
            android:backgroundTint="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"
            android:layout_marginLeft="170dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@id/relation7"
        android:layout_below="@id/relation6"
        android:layout_marginTop="90dp"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp" android:text="@string/next"

            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>