<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5">

    <RelativeLayout
        android:id="@+id/relation"

        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="192dp"
                android:layout_height="117dp"
                android:layout_marginStart="100dp" android:adjustViewBounds="true"

android:layout_marginLeft="100dp"
                android:contentDescription="TODO" android:src="@drawable/icmn" />
            <TextView
                android:id="@+id/text1"
                android:layout_width="320dp"
                android:layout_height="40dp"

                android:layout_below="@id/imageview"
                android:layout_marginVertical="50dp"
                android:layout_marginLeft="40dp"
android:text="@string/beneficiary1"
                android:textAlignment="center"
                android:layout_marginBottom="39dp"
                android:layout_marginStart="40dp" android:background="#3F51B5"
                android:textColor="#FFFFFF"
                android:gravity="center"

                android:textSize="15dp"
                />

            <EditText
                android:id="@+id/edtext1"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_below="@id/text1"
                android:layout_marginTop="-30dp"
                android:layout_marginLeft="40dp"
                android:inputType="" android:paddingLeft="10dp" android:paddingStart="10dp" 
                android:layout_marginStart="40dp" android:background="#FFFFFF"
                android:gravity="center"
                android:hint="@string/beneficiary2"
                />
            <Button
                android:id="@+id/button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtext1"
                android:layout_marginVertical="60dp"
                android:layout_marginLeft="130dp"
                android:layout_marginStart="130dp" android:background="#3ab4cf"
                android:text="@string/beneficiary3"/>
        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>